--- a/stock-alarms-frontend/src/index.css
+++ b/stock-alarms-frontend/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #787878;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: #eaeaea;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
