AlarmsListContainer for showing the user's alarms TODO: handleClickEditButton handleClickDeleteButton         update the alarms,stock data at specified time

--- a/stock-alarms-frontend/src/components/mainPage/MainPage.css
+++ b/stock-alarms-frontend/src/components/mainPage/MainPage.css
@@ -2,6 +2,10 @@
     display: flex;
 }
 .stockDataMainContainer{
+    /**so that i can place he stock list container as absolute to this component*/
+    position: relative; 
     padding: 0;
     margin-left: 20px;
+    min-width: 500px;
+    max-height: 430px;
 }
