--- a/stock-alarms-frontend/src/components/utils/messageBox/MessageBox.css
+++ b/stock-alarms-frontend/src/components/utils/messageBox/MessageBox.css
@@ -5,7 +5,7 @@
     right: 50%;
     transform: translate(-50%, -50%);
     width: 300px;
-    height: 150px;
+    min-height: 150px;
 
     background-color: #ffffff;
     border: 1px solid #000000;
